Added November content to General document on Metaheuristics

--- a/jp/General info on Metaheuristics.ipynb
+++ b/jp/General info on Metaheuristics.ipynb
@@ -207,10 +207,26 @@
    "source": [
     "## Evolutionary strategies\n",
     "#### Introduccion\n",
+    "Al igual que Algoritmos genéticos, esta inspirado en la evolución.\n",
     "\n",
+    "La principal diferencia con Alg. genéticos radica en sus principales operadores:\n",
+    "* Algoritmos geneticos: Crossover (Reproducción)\n",
+    "* Estrategias evolutivas: Mutación\n",
+    "\n",
+    "Es una busqueda poblacional (population-based search), refiriendose a que en primer lugar se genera una población, y en base a esta se van creando nuevas generaciones de poblaciones.\n",
+    "\n",
+    "Maneja el mismo concepto de Parents & offspring que Algoritmos genéticos.\n",
+    "\n",
+    "Existen 2 variantes respecto a la manera en que se crean nuevas generaciones:\n",
+    "* ($ \\mu + \\lambda $) - ES: Tanto hijos como padres compiten hacia la sig. generacion\n",
+    "* ($ \\mu , \\lambda $) - ES: Solo hijos compiten para la sig. generación\n",
     "#### En problemas continuos\n",
     "\n",
-    "#### En problemas combinatorios\n"
+    "\n",
+    "#### En problemas combinatorios\n",
+    "No aplica en problemas combinatorios debido a que su principal operador es la mutación, y esta se implementa generando numeros aleatorios con distribucion normal (Numeros flotantes).\n",
+    "\n",
+    "Cada uno de sus operadores (Sigma, Alfa) son de punto flotante, por lo que sus valores de entrada tambien deben serlo."
    ]
   },
   {
@@ -218,7 +234,19 @@
    "metadata": {},
    "source": [
     "## Constraint handling\n",
-    "#### Técnica de penalización"
+    "\n",
+    "Existen 2 tipos de restricciones:\n",
+    "* Hard constraints: Son restricciones que no pueden violarse, de suceder obtendríamos soluciones que no son válidas.\n",
+    "* Soft constraints: Son restricciones que en teoría pueden violarse, pero es deseable no hacerlo pues nos impactaría negativamente de una u otra manera.\n",
+    "\n",
+    "Existen 3 métodos principales de manejo de restricciones:\n",
+    "* Descartar cualquier solución que no cumpla con las restricciones\n",
+    "* Reparar la solución que no cumpla con la restricción\n",
+    "* Penalizar la solución para que sea menos deseable\n",
+    "\n",
+    "#### Técnica de penalización\n",
+    "\n",
+    "Se añade o sustrae valor de la función objetivo (según se desee minimizar o maximizar, respectivamente), esto provoca que la solución que no cumpla una restricción, se haga menos deseable."
    ]
   },
   {
